kubernets-deploy--microservices-to-aws/ingress/ingress-basic.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
  # annotations:
  #   certmanager.k8s.io/cluster-issuer: core-prod
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/secure-backends: "true"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/websocket-services: core-service
  #   nginx.org/websocket-services: core-service
spec:
  rules:
  - host: myserver.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fleetman-webapp
          servicePort: 80

  # tls:
  # - hosts:
  #   - test.io
  #   secretName: core-prod
