kubernets-deploy--microservices-to-aws/ingress/ingress-secure.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: secure-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mycredentials
    nginx.ingress.kubernetes.io/auth-realm: "Get lost unless you have a password"
spec:
  rules:
  - host: queue.myserver.com
    http:
      paths:
      - path: /
        backend:
          serviceName: fleetman-queue
          servicePort: 8161
